styles: make tabs fixed on mobile view - enforce responsiveness

--- a/src/features/Tazama/TabComponent/TabComponent.module.scss
+++ b/src/features/Tazama/TabComponent/TabComponent.module.scss
@@ -8,6 +8,26 @@
     padding-right: 400px;
     display: flex;
     justify-content: space-between;
+
+    @media (max-width: 1025px) {
+        padding-left: 200px;
+        padding-right: 200px;                
+    }
+    @media (max-width: 866px) {
+        padding-left: 100px;
+        padding-right: 100px;                
+    }
+    @media (max-width: 626px) {
+        padding-left: 32px;
+        padding-right: 32px;                
+    }
+    @media (max-width: 426px) {
+        padding-left: 16px;
+        padding-right: 16px;
+        position: fixed;
+        top: 10%;
+        z-index: 20;                
+    }
 }
 
 // Tab Buttons
@@ -22,6 +42,10 @@
     font-family: Nunito;
     font-weight: 800;
     font-size: 20px;
+
+    @media (max-width: 426px) {
+        font-size: 16px;                
+    }
 }
 
 .ActiveTabButton{
@@ -45,5 +69,14 @@
     padding-right: 132px;
     padding-left: 132px;
     margin-top: 8px;
+
+    @media (max-width: 1025px) {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    @media (max-width: 426px) {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
 }
 
